spec/grammar.ebnf
source_file     = { item } EOF ;

item            = const_item | fn_item | enum_item | struct_item ;
const_item      = "const" ident ":" type_path "=" expr ";" ;

fn_item         = "fn" ident [ generic_param_list ] "(" [ params ] ")" [ return_clause ] [ effects_clause ] [ requires_clause ] [ ensures_clause ] (expr_body | inline_expr_body) ;
inline_expr_body = "=" expr ";" ;
generic_param_list = "[" generic_param { "," generic_param } [ "," ] "]" ;
generic_param   = ident [ ":" ident ] ;
params          = param { "," param } [ "," ] ;
param           = ident ":" type_path ;
return_clause   = "->" type_path ;
effects_clause  = "effects" "[" [ effect_list ] "]" ;
effect_list     = ident { "," ident } [ "," ] ;
requires_clause = "requires" expr ;
ensures_clause  = "ensures" expr ;

enum_item       = "enum" ident "{" [ variant_list ] "}" ;
variant_list    = enum_variant { "," enum_variant } [ "," ] ;
enum_variant    = ident [ "(" type_path ")" ] ;

struct_item     = "struct" ident "{" [ field_list ] "}" ;
field_list      = field { "," field } [ "," ] ;
field           = ident ":" type_path ;

type_path       = named_type | array_type ;
named_type      = ident { "." ident } ;
array_type      = "[" type_path ";" array_len "]" ;
array_len       = integer | ident ;
let_stmt        = "let" [ "mut" ] ident "=" expr ";" ;
assign_stmt     = ident ("=" | "+=" | "-=" | "*=" | "/=") expr ";" ;
expr_stmt       = expr ";" ;
stmt            = let_stmt | assign_stmt | expr_stmt ;
expr_body       = "{" { stmt } [ expr ] "}" ;
block           = "{" { token | block } "}" ;
expr            = disjunction ;
disjunction     = conjunction { "or" conjunction } ;
conjunction     = negation { "and" negation } ;
negation        = [ "not" ] comparison ;
comparison      = additive { ("==" | "!=" | "<" | "<=" | ">" | ">=") additive } ;
additive        = multiplicative { ("+" | "-") multiplicative } ;
multiplicative  = postfix { ("*" | "/") postfix } ;
postfix         = primary { "(" [ arguments ] ")" | "." ident | "[" expr "]" } ;
arguments       = expr { "," expr } [ "," ] ;
record_literal  = type_path "{" [ record_arguments ] "}" ;
record_arguments = record_argument { "," record_argument } [ "," ] ;
record_argument = ident ":" expr ;
array_literal   = "[" [ expr { "," expr } [ "," ] ] "]" ;
if_expr         = "if" expr expr_body [ "else" expr_body ] ;
match_expr      = "match" expr "{" [ match_arms ] "}" ;
match_arms      = match_arm { "," match_arm } [ "," ] ;
match_arm       = match_pattern "=>" expr_body ;
match_pattern   = type_path [ "(" ident ")" ] | integer | string | boolean | "_" ;
repeat_expr     = "repeat" [ ident "in" ] expr expr_body ;
while_expr      = "while" expr expr_body ;
primary         = integer | string | boolean | ident | "result" | "(" expr ")" | record_literal | array_literal | if_expr | match_expr | repeat_expr | while_expr ;
boolean         = "true" | "false" ;

ident           = ASCII_IDENT ;
