crates/sarif_syntax/src/parser.rs
use crate::{Diagnostic, Element, Node, NodeKind, Token, TokenKind};

#[derive(Clone, Debug)]
pub struct ParseOutput {
    pub root: Node,
    pub diagnostics: Vec<Diagnostic>,
}

#[must_use]
pub fn parse(tokens: &[Token]) -> ParseOutput {
    Parser::new(tokens).parse()
}

struct Parser<'a> {
    tokens: &'a [Token],
    cursor: usize,
    diagnostics: Vec<Diagnostic>,
}

impl<'a> Parser<'a> {
    const fn new(tokens: &'a [Token]) -> Self {
        Self {
            tokens,
            cursor: 0,
            diagnostics: Vec::new(),
        }
    }

    fn parse(mut self) -> ParseOutput {
        let mut children = Vec::new();

        self.collect_trivia(&mut children);

        loop {
            if self.at(TokenKind::KwEnum) {
                children.push(Element::Node(self.parse_enum_item()));
            } else if self.at(TokenKind::KwStruct) {
                children.push(Element::Node(self.parse_struct_item()));
            } else if self.at(TokenKind::KwEffect) {
                children.push(Element::Node(self.parse_effect_item()));
            } else if self.at(TokenKind::KwExtern) {
                children.push(Element::Node(self.parse_extern_block()));
            } else if self.at(TokenKind::KwConst) {
                children.push(Element::Node(self.parse_const_item()));
            } else if self.at(TokenKind::KwFn) {
                children.push(Element::Node(self.parse_fn_item()));
            } else {
                break;
            }
            self.collect_trivia(&mut children);
        }

        if !self.at(TokenKind::Eof) {
            let token = self.bump();
            self.diagnostics.push(Diagnostic::new(
                "parse.out-of-order-item",
                format!("unexpected token `{:?}`: expected a top-level item (enum, struct, effect, extern, const, fn)", token.kind),
                token.span,
                Some("Move this item to its canonical section.".to_owned()),
            ));
            children.push(Element::Token(token));
        }

        if self.at(TokenKind::Eof) {
            children.push(Element::Token(self.bump()));
        }

        ParseOutput {
            root: Node::new(NodeKind::SourceFile, children),
            diagnostics: self.diagnostics,
        }
    }

    fn parse_const_item(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::KwConst)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Ident)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Colon)));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_type()));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Eq)));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_expr_bp(0)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Semicolon)));
        Node::new(NodeKind::ConstItem, children)
    }

    fn parse_fn_item(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::KwFn)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Ident)));
        self.collect_trivia(&mut children);

        if self.at(TokenKind::LBracket) {
            children.push(Element::Node(self.parse_generic_params()));
            self.collect_trivia(&mut children);
        }

        children.push(Element::Token(self.expect(TokenKind::LParen)));
        children.push(Element::Node(self.parse_param_list()));
        children.push(Element::Token(self.expect(TokenKind::RParen)));

        self.collect_trivia(&mut children);
        if self.at(TokenKind::Arrow) {
            let mut return_children = Vec::new();
            return_children.push(Element::Token(self.bump()));
            self.collect_trivia(&mut return_children);
            return_children.push(Element::Node(self.parse_type()));
            children.push(Element::Node(Node::new(
                NodeKind::ReturnType,
                return_children,
            )));
        }

        self.collect_trivia(&mut children);
        if self.at(TokenKind::KwEffects) {
            children.push(Element::Node(self.parse_effects_clause()));
        }

        self.collect_trivia(&mut children);
        if self.at(TokenKind::KwRequires) {
            children.push(Element::Node(self.parse_contract_clause(
                TokenKind::KwRequires,
                NodeKind::RequiresClause,
            )));
        }

        self.collect_trivia(&mut children);
        if self.at(TokenKind::KwEnsures) {
            children.push(Element::Node(
                self.parse_contract_clause(TokenKind::KwEnsures, NodeKind::EnsuresClause),
            ));
        }

        self.collect_trivia(&mut children);
        if self.at(TokenKind::Eq) {
            children.push(Element::Node(self.parse_inline_expr_body()));
        } else {
            children.push(Element::Node(self.parse_expr_body()));
        }

        Node::new(NodeKind::FnItem, children)
    }

    fn parse_enum_item(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::KwEnum)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Ident)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::LBrace)));
        children.push(Element::Node(self.parse_variant_list()));
        children.push(Element::Token(self.expect(TokenKind::RBrace)));
        Node::new(NodeKind::EnumItem, children)
    }

    fn parse_struct_item(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::KwStruct)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Ident)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::LBrace)));
        children.push(Element::Node(self.parse_field_list()));
        children.push(Element::Token(self.expect(TokenKind::RBrace)));
        Node::new(NodeKind::StructItem, children)
    }

    fn parse_generic_params(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::LBracket)));
        self.collect_trivia(&mut children);

        if !self.at(TokenKind::RBracket) {
            loop {
                let mut param_children = Vec::new();
                param_children.push(Element::Token(self.expect(TokenKind::Ident)));
                self.collect_trivia(&mut param_children);
                if self.at(TokenKind::Colon) {
                    param_children.push(Element::Token(self.bump()));
                    self.collect_trivia(&mut param_children);
                    param_children.push(Element::Token(self.expect(TokenKind::Ident)));
                    self.collect_trivia(&mut param_children);
                }
                children.push(Element::Node(Node::new(
                    NodeKind::GenericParam,
                    param_children,
                )));

                if self.at(TokenKind::Comma) {
                    children.push(Element::Token(self.bump()));
                    self.collect_trivia(&mut children);
                } else {
                    break;
                }
            }
        }

        children.push(Element::Token(self.expect(TokenKind::RBracket)));
        Node::new(NodeKind::GenericParamList, children)
    }

    fn parse_param_list(&mut self) -> Node {
        let mut children = Vec::new();
        let offset = self.current().span.start;

        while !self.at(TokenKind::RParen) && !self.at(TokenKind::Eof) {
            self.collect_trivia(&mut children);

            if self.at(TokenKind::RParen) || self.at(TokenKind::Eof) {
                break;
            }

            children.push(Element::Node(self.parse_param()));
            self.collect_trivia(&mut children);

            if self.at(TokenKind::Comma) {
                children.push(Element::Token(self.bump()));
            } else {
                break;
            }
        }

        if children.is_empty() {
            Node::empty(NodeKind::ParamList, offset)
        } else {
            Node::new(NodeKind::ParamList, children)
        }
    }

    fn parse_param(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::Ident)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Colon)));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_type()));
        Node::new(NodeKind::Param, children)
    }

    fn parse_effects_clause(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::KwEffects)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::LBracket)));

        let mut effects = Vec::new();
        let offset = self.current().span.start;
        while !self.at(TokenKind::RBracket) && !self.at(TokenKind::Eof) {
            self.collect_trivia(&mut effects);

            if self.at(TokenKind::RBracket) || self.at(TokenKind::Eof) {
                break;
            }

            effects.push(Element::Token(self.expect(TokenKind::Ident)));
            self.collect_trivia(&mut effects);

            if self.at(TokenKind::Comma) {
                effects.push(Element::Token(self.bump()));
            } else {
                break;
            }
        }

        if effects.is_empty() {
            children.push(Element::Node(Node::empty(NodeKind::EffectList, offset)));
        } else {
            children.push(Element::Node(Node::new(NodeKind::EffectList, effects)));
        }
        children.push(Element::Token(self.expect(TokenKind::RBracket)));
        Node::new(NodeKind::EffectsClause, children)
    }

    fn parse_field_list(&mut self) -> Node {
        let mut children = Vec::new();
        let offset = self.current().span.start;

        while !self.at(TokenKind::RBrace) && !self.at(TokenKind::Eof) {
            self.collect_trivia(&mut children);

            if self.at(TokenKind::RBrace) || self.at(TokenKind::Eof) {
                break;
            }

            let mut field_children = Vec::new();
            field_children.push(Element::Token(self.expect(TokenKind::Ident)));
            self.collect_trivia(&mut field_children);
            field_children.push(Element::Token(self.expect(TokenKind::Colon)));
            self.collect_trivia(&mut field_children);
            field_children.push(Element::Node(self.parse_type()));
            children.push(Element::Node(Node::new(NodeKind::Field, field_children)));

            self.collect_trivia(&mut children);
            if self.at(TokenKind::Comma) {
                children.push(Element::Token(self.bump()));
            } else {
                break;
            }
        }

        if children.is_empty() {
            Node::empty(NodeKind::FieldList, offset)
        } else {
            Node::new(NodeKind::FieldList, children)
        }
    }

    fn parse_variant_list(&mut self) -> Node {
        let mut children = Vec::new();
        let offset = self.current().span.start;

        while !self.at(TokenKind::RBrace) && !self.at(TokenKind::Eof) {
            self.collect_trivia(&mut children);

            if self.at(TokenKind::RBrace) || self.at(TokenKind::Eof) {
                break;
            }

            let mut variant_children = vec![Element::Token(self.expect(TokenKind::Ident))];
            self.collect_trivia(&mut variant_children);
            if self.at(TokenKind::LParen) {
                variant_children.push(Element::Token(self.bump()));
                self.collect_trivia(&mut variant_children);
                variant_children.push(Element::Node(self.parse_type()));
                self.collect_trivia(&mut variant_children);
                variant_children.push(Element::Token(self.expect(TokenKind::RParen)));
            }
            self.collect_trivia(&mut variant_children);
            if self.at(TokenKind::Eq) {
                variant_children.push(Element::Token(self.bump()));
                self.collect_trivia(&mut variant_children);
                variant_children.push(Element::Node(self.parse_expr_bp(0)));
            }
            children.push(Element::Node(Node::new(
                NodeKind::Variant,
                variant_children,
            )));
            self.collect_trivia(&mut children);

            if self.at(TokenKind::Comma) {
                children.push(Element::Token(self.bump()));
            } else {
                break;
            }
        }

        if children.is_empty() {
            Node::empty(NodeKind::VariantList, offset)
        } else {
            Node::new(NodeKind::VariantList, children)
        }
    }

    fn parse_contract_clause(&mut self, keyword: TokenKind, kind: NodeKind) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(keyword)));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_expr_bp(0)));
        Node::new(kind, children)
    }

    fn parse_type(&mut self) -> Node {
        if self.at(TokenKind::LBracket) {
            self.parse_array_type()
        } else {
            self.parse_type_path()
        }
    }

    fn parse_type_path(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::Ident)));

        while self.peek_trivia_then(TokenKind::Dot) {
            self.collect_trivia(&mut children);
            children.push(Element::Token(self.expect(TokenKind::Dot)));
            self.collect_trivia(&mut children);
            children.push(Element::Token(self.expect(TokenKind::Ident)));
        }

        if self.peek_trivia_then(TokenKind::LBracket) {
            self.collect_trivia(&mut children);
            children.push(Element::Token(self.expect(TokenKind::LBracket)));
            self.collect_trivia(&mut children);
            children.push(Element::Node(self.parse_type()));
            self.collect_trivia(&mut children);
            children.push(Element::Token(self.expect(TokenKind::RBracket)));
        }

        Node::new(NodeKind::TypePath, children)
    }

    fn parse_array_type(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::LBracket)));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_type()));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Semicolon)));
        self.collect_trivia(&mut children);
        match self.current_non_trivia_kind() {
            Some(TokenKind::Integer) => {
                children.push(Element::Token(self.expect(TokenKind::Integer)));
            }
            Some(TokenKind::Ident) => children.push(Element::Token(self.expect(TokenKind::Ident))),
            _ => children.push(Element::Token(self.expect(TokenKind::Integer))),
        }
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::RBracket)));
        Node::new(NodeKind::TypeArray, children)
    }

    fn parse_comptime_expr(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::KwComptime)));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_expr_body()));
        Node::new(NodeKind::ExprComptime, children)
    }

    fn parse_perform_expr(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::KwPerform)));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_type_path()));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::LParen)));
        children.push(Element::Node(self.parse_arg_list()));
        children.push(Element::Token(self.expect(TokenKind::RParen)));
        Node::new(NodeKind::ExprPerform, children)
    }

    fn parse_effect_item(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::KwEffect)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Ident)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::LBrace)));
        self.collect_trivia(&mut children);
        while self.at(TokenKind::KwFn) {
            let mut method_children = Vec::new();
            method_children.push(Element::Token(self.bump()));
            self.collect_trivia(&mut method_children);
            method_children.push(Element::Token(self.expect(TokenKind::Ident)));
            self.collect_trivia(&mut method_children);
            method_children.push(Element::Token(self.expect(TokenKind::LParen)));
            method_children.push(Element::Node(self.parse_param_list()));
            method_children.push(Element::Token(self.expect(TokenKind::RParen)));
            self.collect_trivia(&mut method_children);
            if self.at(TokenKind::Arrow) {
                let mut return_children = Vec::new();
                return_children.push(Element::Token(self.bump()));
                self.collect_trivia(&mut return_children);
                return_children.push(Element::Node(self.parse_type()));
                method_children.push(Element::Node(Node::new(
                    NodeKind::ReturnType,
                    return_children,
                )));
            }
            self.collect_trivia(&mut method_children);
            method_children.push(Element::Token(self.expect(TokenKind::Semicolon)));
            children.push(Element::Node(Node::new(NodeKind::FnItem, method_children)));
            self.collect_trivia(&mut children);
        }
        children.push(Element::Token(self.expect(TokenKind::RBrace)));
        Node::new(NodeKind::EffectItem, children)
    }

    fn parse_extern_block(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::KwExtern)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::LBrace)));
        self.collect_trivia(&mut children);
        while self.at(TokenKind::KwFn) {
            let mut fn_children = Vec::new();
            fn_children.push(Element::Token(self.bump()));
            self.collect_trivia(&mut fn_children);
            fn_children.push(Element::Token(self.expect(TokenKind::Ident)));
            self.collect_trivia(&mut fn_children);
            fn_children.push(Element::Token(self.expect(TokenKind::LParen)));
            fn_children.push(Element::Node(self.parse_param_list()));
            fn_children.push(Element::Token(self.expect(TokenKind::RParen)));
            self.collect_trivia(&mut fn_children);
            if self.at(TokenKind::Arrow) {
                let mut return_children = Vec::new();
                return_children.push(Element::Token(self.bump()));
                self.collect_trivia(&mut return_children);
                return_children.push(Element::Node(self.parse_type()));
                fn_children.push(Element::Node(Node::new(
                    NodeKind::ReturnType,
                    return_children,
                )));
            }
            self.collect_trivia(&mut fn_children);
            fn_children.push(Element::Token(self.expect(TokenKind::Semicolon)));
            children.push(Element::Node(Node::new(NodeKind::FnItem, fn_children)));
            self.collect_trivia(&mut children);
        }
        children.push(Element::Token(self.expect(TokenKind::RBrace)));
        Node::new(NodeKind::ExternBlock, children)
    }

    fn parse_handle_expr(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::KwHandle)));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_expr_body()));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::KwWith)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::LBrace)));
        self.collect_trivia(&mut children);
        while !self.at(TokenKind::RBrace) && !self.at(TokenKind::Eof) {
            let mut arm_children = Vec::new();
            arm_children.push(Element::Token(self.expect(TokenKind::Ident)));
            self.collect_trivia(&mut arm_children);
            arm_children.push(Element::Token(self.expect(TokenKind::LParen)));
            self.collect_trivia(&mut arm_children);
            while !self.at(TokenKind::RParen) && !self.at(TokenKind::Eof) {
                arm_children.push(Element::Token(self.expect(TokenKind::Ident)));
                self.collect_trivia(&mut arm_children);
                if self.at(TokenKind::Comma) {
                    arm_children.push(Element::Token(self.bump()));
                    self.collect_trivia(&mut arm_children);
                }
            }
            arm_children.push(Element::Token(self.expect(TokenKind::RParen)));
            self.collect_trivia(&mut arm_children);
            arm_children.push(Element::Token(self.expect(TokenKind::FatArrow)));
            self.collect_trivia(&mut arm_children);
            arm_children.push(Element::Node(self.parse_expr_body()));
            children.push(Element::Node(Node::new(NodeKind::HandleArm, arm_children)));
            self.collect_trivia(&mut children);
        }
        children.push(Element::Token(self.expect(TokenKind::RBrace)));
        Node::new(NodeKind::ExprHandle, children)
    }

    fn parse_expr_body(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::LBrace)));
        self.collect_trivia(&mut children);

        loop {
            let statement = match self.current_non_trivia_kind() {
                Some(TokenKind::KwLet) => Some(self.parse_let_stmt()),
                Some(TokenKind::Ident) if self.tokens[self.cursor].lexeme == "with_arena" => {
                    Some(self.parse_with_arena_stmt())
                }
                Some(TokenKind::Ident) if self.next_name_is_assign_statement() => {
                    Some(self.parse_assign_stmt())
                }
                Some(kind) if Self::starts_expr(kind) && self.next_expr_is_statement() => {
                    Some(self.parse_expr_stmt())
                }
                _ => None,
            };

            let Some(statement) = statement else {
                break;
            };
            children.push(Element::Node(statement));
            self.collect_trivia(&mut children);
        }

        if !self.at(TokenKind::RBrace) && !self.at(TokenKind::Eof) {
            children.push(Element::Node(self.parse_expr_bp(0)));
            self.collect_trivia(&mut children);

            while !self.at(TokenKind::RBrace) && !self.at(TokenKind::Eof) {
                let token = self.bump();
                self.diagnostics.push(Diagnostic::new(
                    "parse.unexpected-token",
                    format!("unexpected token `{:?}` in function body", token.kind),
                    token.span,
                    Some(
                        "This stage-0 body grammar accepts zero or more `let`/assignment/unit-expression statements followed by one optional tail expression.".to_owned(),
                    ),
                ));
                children.push(Element::Token(token));
                self.collect_trivia(&mut children);
            }
        }

        children.push(Element::Token(self.expect(TokenKind::RBrace)));
        Node::new(NodeKind::Body, children)
    }

    fn next_expr_is_statement(&self) -> bool {
        let mut depth: u32 = 0;
        let mut i = self.cursor;
        while let Some(token) = self.tokens.get(i) {
            match token.kind {
                k if k.is_trivia() => {}
                TokenKind::LParen | TokenKind::LBracket | TokenKind::LBrace => depth += 1,
                TokenKind::RParen | TokenKind::RBracket | TokenKind::RBrace => {
                    if depth == 0 {
                        return false;
                    }
                    depth -= 1;
                }
                TokenKind::Semicolon if depth == 0 => return true,
                _ => {}
            }
            i += 1;
        }
        false
    }

    fn next_name_is_assign_statement(&self) -> bool {
        let mut index = self.cursor;

        while self
            .tokens
            .get(index)
            .is_some_and(|token| token.kind.is_trivia())
        {
            index += 1;
        }

        if !self
            .tokens
            .get(index)
            .is_some_and(|token| token.kind == TokenKind::Ident)
        {
            return false;
        }
        index += 1;

        loop {
            while self
                .tokens
                .get(index)
                .is_some_and(|token| token.kind.is_trivia())
            {
                index += 1;
            }

            if self
                .tokens
                .get(index)
                .is_some_and(|token| token.kind == TokenKind::Dot)
            {
                index += 1;
                while self
                    .tokens
                    .get(index)
                    .is_some_and(|token| token.kind.is_trivia())
                {
                    index += 1;
                }
                if !self
                    .tokens
                    .get(index)
                    .is_some_and(|token| token.kind == TokenKind::Ident)
                {
                    return false;
                }
                index += 1;
                continue;
            }

            if !self
                .tokens
                .get(index)
                .is_some_and(|token| token.kind == TokenKind::LBracket)
            {
                break;
            }

            let mut depth = 0usize;
            while let Some(token) = self.tokens.get(index) {
                match token.kind {
                    TokenKind::LBracket => depth += 1,
                    TokenKind::RBracket => {
                        depth = depth.saturating_sub(1);
                        if depth == 0 {
                            index += 1;
                            break;
                        }
                    }
                    _ => {}
                }
                index += 1;
            }

            if depth != 0 {
                return false;
            }
        }

        self.tokens.get(index).is_some_and(|token| {
            matches!(
                token.kind,
                TokenKind::Eq
                    | TokenKind::PlusEq
                    | TokenKind::MinusEq
                    | TokenKind::StarEq
                    | TokenKind::SlashEq
            )
        })
    }

    fn parse_inline_expr_body(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::Eq)));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_expr_bp(0)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Semicolon)));
        Node::new(NodeKind::Body, children)
    }

    const fn starts_expr(kind: TokenKind) -> bool {
        matches!(
            kind,
            TokenKind::Integer
                | TokenKind::Float
                | TokenKind::Minus
                | TokenKind::String
                | TokenKind::KwTrue
                | TokenKind::KwFalse
                | TokenKind::Ident
                | TokenKind::LBracket
                | TokenKind::LParen
                | TokenKind::KwIf
                | TokenKind::KwMatch
        | TokenKind::KwRepeat
        | TokenKind::KwFor
        | TokenKind::KwWhile
                | TokenKind::KwComptime
                | TokenKind::KwHandle
        )
    }

    fn parse_let_stmt(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.expect(TokenKind::KwLet)));
        self.collect_trivia(&mut children);
        if self.at(TokenKind::KwMut) {
            children.push(Element::Token(self.bump()));
            self.collect_trivia(&mut children);
        }
        if self.at(TokenKind::LParen) {
            self.parse_tuple_destructure_pattern(&mut children);
        } else {
            children.push(Element::Token(self.expect(TokenKind::Ident)));
        }
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Eq)));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_expr_bp(0)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Semicolon)));
        Node::new(NodeKind::LetStmt, children)
    }

    fn parse_tuple_destructure_pattern(&mut self, children: &mut Vec<Element>) {
        children.push(Element::Token(self.expect(TokenKind::LParen)));
        self.collect_trivia(children);
        loop {
            children.push(Element::Token(self.expect(TokenKind::Ident)));
            self.collect_trivia(children);
            if self.at(TokenKind::Comma) {
                children.push(Element::Token(self.bump()));
                self.collect_trivia(children);
            } else {
                break;
            }
        }
        children.push(Element::Token(self.expect(TokenKind::RParen)));
    }

    fn parse_assign_stmt(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Node(self.parse_assign_target_expr()));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect_assign_op()));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_expr_bp(0)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Semicolon)));
        Node::new(NodeKind::AssignStmt, children)
    }

    fn expect_assign_op(&mut self) -> Token {
        match self.current_non_trivia_kind() {
            Some(TokenKind::PlusEq) => self.expect(TokenKind::PlusEq),
            Some(TokenKind::MinusEq) => self.expect(TokenKind::MinusEq),
            Some(TokenKind::StarEq) => self.expect(TokenKind::StarEq),
            Some(TokenKind::SlashEq) => self.expect(TokenKind::SlashEq),
            _ => self.expect(TokenKind::Eq),
        }
    }

    fn parse_assign_target_expr(&mut self) -> Node {
        let mut children = Vec::new();
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Ident)));
        let mut expr = Node::new(NodeKind::ExprName, children);

        loop {
            if self.peek_trivia_then(TokenKind::Dot) {
                let mut field_children = vec![Element::Node(expr)];
                self.collect_trivia(&mut field_children);
                field_children.push(Element::Token(self.expect(TokenKind::Dot)));
                self.collect_trivia(&mut field_children);
                field_children.push(Element::Token(self.expect(TokenKind::Ident)));
                expr = Node::new(NodeKind::ExprField, field_children);
                continue;
            }
            if self.peek_trivia_then(TokenKind::LBracket) {
                let mut index_children = vec![Element::Node(expr)];
                self.collect_trivia(&mut index_children);
                index_children.push(Element::Token(self.expect(TokenKind::LBracket)));
                self.collect_trivia(&mut index_children);
                index_children.push(Element::Node(self.parse_expr_bp(0)));
                self.collect_trivia(&mut index_children);
                index_children.push(Element::Token(self.expect(TokenKind::RBracket)));
                expr = Node::new(NodeKind::ExprIndex, index_children);
                continue;
            }
            break;
        }

        expr
    }

    fn parse_expr_stmt(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Node(self.parse_expr_bp(0)));
        self.collect_trivia(&mut children);
        children.push(Element::Token(self.expect(TokenKind::Semicolon)));
        Node::new(NodeKind::ExprStmt, children)
    }

    fn parse_with_arena_stmt(&mut self) -> Node {
        let mut children = Vec::new();
        children.push(Element::Token(self.bump()));
        self.collect_trivia(&mut children);
        children.push(Element::Node(self.parse_expr_body()));
        Node::new(NodeKind::WithArenaStmt, children)
    }

    fn parse_expr_bp(&mut self, min_bp: u8) -> Node {
        let mut lhs = self.parse_postfix_expr();

        while let Some(op_kind) = self.peek_non_trivia_kind() {
            let Some((left_bp, right_bp)) = infix_binding_power(op_kind) else {
                break;
            };
            if left_bp < min_bp {
                break;
            }

            let mut children = vec![Element::Node(lhs)];
            self.collect_trivia(&mut children);
            children.push(Element::Token(self.expect(op_kind)));
            self.collect_trivia(&mut children);
            children.push(Element::Node(self.parse_expr_bp(right_bp)));
            lhs = Node::new(NodeKind::ExprBinary, children);
        }

        lhs
    }

    fn parse_postfix_expr(&mut self) -> Node {
        let mut expr = self.parse_prefix_expr();

        loop {
            if self.peek_trivia_then(TokenKind::LParen) {
                let mut children = vec![Element::Node(expr)];
                self.collect_trivia(&mut children);
                children.push(Element::Token(self.expect(TokenKind::LParen)));
                children.push(Element::Node(self.parse_arg_list()));
                children.push(Element::Token(self.expect(TokenKind::RParen)));
                expr = Node::new(NodeKind::ExprCall, children);
                continue;
            }

            if self.peek_trivia_then(TokenKind::Dot) {
                let mut children = vec![Element::Node(expr)];
                self.collect_trivia(&mut children);
                children.push(Element::Token(self.expect(TokenKind::Dot)));
                self.collect_trivia(&mut children);
                children.push(Element::Token(self.expect(TokenKind::Ident)));
                expr = Node::new(NodeKind::ExprField, children);
                continue;
            }

            if self.peek_trivia_then(TokenKind::LBracket) {
                let mut children = vec![Element::Node(expr)];
                self.collect_trivia(&mut children);
                children.push(Element::Token(self.expect(TokenKind::LBracket)));
                self.collect_trivia(&mut children);
                children.push(Element::Node(self.parse_expr_bp(0)));
                self.collect_trivia(&mut children);
                children.push(Element::Token(self.expect(TokenKind::RBracket)));
                expr = Node::new(NodeKind::ExprIndex, children);
                continue;
            }

            break;
        }

        expr
    }

    fn parse_prefix_expr(&mut self) -> Node {
        if matches!(self.current_non_trivia_kind(), Some(TokenKind::KwNot)) {
            let mut children = Vec::new();
            self.collect_trivia(&mut children);
            children.push(Element::Token(self.expect(TokenKind::KwNot)));
            self.collect_trivia(&mut children);
            children.push(Element::Node(self.parse_postfix_expr()));
            return Node::new(NodeKind::ExprUnary, children);
        }

        self.parse_primary_expr()
    }
